// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack.source given: [case1] all keys granted via env passthrough when: [t1] rhx keyrack get (formatted) with env vars set then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case1] all keys granted via env passthrough when: [t1] rhx keyrack get (formatted) with env vars set then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.test.__TEST_SOURCE_KEY_1__
   │  ├─ vault: os.envvar
   │  ├─ mech: PERMANENT_VIA_REPLICA
   │  └─ status: granted 🔑
   └─ testorg.test.__TEST_SOURCE_KEY_2__
      ├─ vault: os.envvar
      ├─ mech: PERMANENT_VIA_REPLICA
      └─ status: granted 🔑

"
`;

exports[`keyrack.source given: [case2] some keys absent (not in env, not hosted) when: [t1] rhx keyrack get (formatted) with one env var set then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case2] some keys absent (not in env, not hosted) when: [t1] rhx keyrack get (formatted) with one env var set then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.test.__TEST_SOURCE_PRESENT__
   │  ├─ vault: os.envvar
   │  ├─ mech: PERMANENT_VIA_REPLICA
   │  └─ status: granted 🔑
   └─ testorg.test.__TEST_SOURCE_ABSENT__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --key __TEST_SOURCE_ABSENT__ --env test[0m

"
`;

exports[`keyrack.source given: [case3] no keyrack.yml in repo (no keys required) when: [t0] rhx keyrack get --json called then: stderr matches snapshot 1`] = `
"
⛈️ BadRequestError: no keyrack.yml found in repo. --for repo requires keyrack.yml

[args] keyrack,get,--for,repo,--env,test,--json

"
`;

exports[`keyrack.source given: [case3] no keyrack.yml in repo (no keys required) when: [t0] rhx keyrack get --json called then: stdout matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case4] key truly absent (never set, no env var) when: [t1] rhx keyrack get (formatted) without env var (isolated daemon) then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case4] key truly absent (never set, no env var) when: [t1] rhx keyrack get (formatted) without env var (isolated daemon) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.__TEST_SOURCE_NOTAVAIL__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --key __TEST_SOURCE_NOTAVAIL__ --env test[0m

"
`;

exports[`keyrack.source given: [case5] keys in env.all count for test env when: [t1] rhx keyrack get (formatted) for test env then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case5] keys in env.all count for test env when: [t1] rhx keyrack get (formatted) for test env then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   ├─ testorg.all.__TEST_SOURCE_ALL__
   │  ├─ vault: os.envvar
   │  ├─ mech: PERMANENT_VIA_REPLICA
   │  └─ status: granted 🔑
   └─ testorg.test.__TEST_SOURCE_ALL__
      ├─ vault: os.envvar
      ├─ mech: PERMANENT_VIA_REPLICA
      └─ status: granted 🔑

"
`;

exports[`keyrack.source given: [case6] key locked (set to os.secure but daemon not unlocked) when: [t1] rhx keyrack get (formatted) without unlock (isolated daemon) then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case6] key locked (set to os.secure but daemon not unlocked) when: [t1] rhx keyrack get (formatted) without unlock (isolated daemon) then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.__TEST_SOURCE_LOCKED__
      ├─ status: locked 🔒
      └─ [2mtip: rhx keyrack unlock --env test --key __TEST_SOURCE_LOCKED__[0m

"
`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t0] keyrack.source() called then: stderr matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.__TEST_SDK_STRICT_ABSENT__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --key __TEST_SDK_STRICT_ABSENT__ --env test[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again
"
`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t0] keyrack.source() called then: stdout matches snapshot 1`] = `
"
🔐 keyrack
   └─ testorg.test.__TEST_SDK_STRICT_ABSENT__
      ├─ status: absent 🫧
      └─ [2mtip: rhx keyrack set --key __TEST_SDK_STRICT_ABSENT__ --env test[0m

✋ some keys were not granted, yet are strictly required
   └─ ask a human to set the keys, then try again
"
`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t1] lenient mode with absent keys then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t1] lenient mode with absent keys then: stdout matches snapshot 1`] = `
"lenient mode completed
"
`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t2] strict mode with all keys granted via env passthrough then: stderr matches snapshot 1`] = `""`;

exports[`keyrack.source given: [case7] keyrack.source() SDK with absent keys (strict mode) when: [t2] strict mode with all keys granted via env passthrough then: stdout matches snapshot 1`] = `
"granted value: granted-test-value
"
`;
